# my-jlrs-examples

./: LICENSE  README.md
add1and2/: Cargo.toml
call_julia_from_rust/add1and2/src/: main.rs
call_julia_from_rust/hello_world/src/: main.rs
call_julia_from_rust/ndarray/src/: main.rs
call_julia_from_rust/using_packages/: build.sh
call_julia_from_rust/using_packages/src/: main.rs
call_rust_from_julia/example/: Cargo.toml  Manifest.toml  README.md  example.jl  run.sh
call_rust_from_julia/example/src/: lib.rs
call_rust_from_julia/self-contained-capi/: Cargo.toml  build.sh
call_rust_from_julia/self-contained-capi/src/: main.rs
evalstring/: Cargo.toml
evalstring/src/: main.rs
helloworld/: Cargo.toml
ndarray/: Cargo.toml
